Citation Map has been created but not yet prepped for output

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
     <body>
         <a href="/web/viewer.html?file=2022604_Draft_Proposal.pdf">View PDF File</a>
+        <h1> What is the DOI? </h1>
+        <p> DOI: <span id="doi"></span></p>
+        <script src ="./node_modules/axios/dist/axios.min.js"></script>
+        <script src ="web/find_citations_axios.js"></script>
     </body>
 </html>
